src/backend/muxml2/snapshots/guitar_tab__backend__muxml2__muxml2_tests__muxml2.snap
---
source: src/backend/muxml2/muxml2_tests.rs
expression: "String::from_utf8_lossy(&out)"
---
<?xml version="1.0" encoding="UTF-8"?>
<!DOCTYPE score-partwise PUBLIC "-//Recordare//DTD MusicXML 4.0 Partwise//EN" "http://www.musicxml.org/dtds/partwise.dtd">
<score-partwise version="4.0">
  <identification>
    <encoding>
      <software>guitar_tab</software>
      <supports element="accidental" type="yes"/>
      <supports element="beam" type="yes"/>
      <supports element="print" attribute="new-page" type="no"/>
      <supports element="print" attribute="new-system" type="no"/>
      <supports element="stem" type="yes"/>
    </encoding>
  </identification>
  <part-list>
    <score-part id="P1">
      <part-name>Guitar1</part-name>
    </score-part>
  </part-list>
  <part id="P1">
  
<measure number="0">
  <attributes>
    <divisions>2</divisions>
    <key><fifths>0</fifths></key>
    <time>
      <beats>9</beats>
      <beat-type>8</beat-type>
    </time>
    <clef><sign>G</sign><line>2</line></clef> 
  </attributes>
  
<note>
  
  <pitch>
    <step>C</step>
    
    <octave>4</octave>
  </pitch>
  <duration>1</duration>
  <type>eighth</type>
  
</note>

<note>
  
  <pitch>
    <step>D</step>
    
    <octave>4</octave>
  </pitch>
  <duration>1</duration>
  <type>eighth</type>
  
</note>

<note>
  
  <pitch>
    <step>E</step>
    
    <octave>4</octave>
  </pitch>
  <duration>1</duration>
  <type>eighth</type>
  
</note>

<note>
  <rest measure="no"/>
  <duration>1</duration>
  <voice>1</voice>
  <type>eighth</type>
</note>

<note>
  
  <pitch>
    <step>F</step>
    <alter>1</alter>
    <octave>4</octave>
  </pitch>
  <duration>1</duration>
  <type>eighth</type>
  <accidental>sharp</accidental>
</note>

<note>
  
  <pitch>
    <step>G</step>
    <alter>1</alter>
    <octave>4</octave>
  </pitch>
  <duration>1</duration>
  <type>eighth</type>
  <accidental>sharp</accidental>
</note>

<note>
  
  <pitch>
    <step>A</step>
    
    <octave>4</octave>
  </pitch>
  <duration>1</duration>
  <type>eighth</type>
  
</note>

<note>
  
  <pitch>
    <step>B</step>
    
    <octave>4</octave>
  </pitch>
  <duration>1</duration>
  <type>eighth</type>
  
</note>

<note>
  
  <pitch>
    <step>C</step>
    
    <octave>5</octave>
  </pitch>
  <duration>1</duration>
  <type>eighth</type>
  
</note>

</measure>

  </part>
</score-partwise>
